--- a/Day5.html
+++ b/Day5.html
@@ -2,12 +2,25 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"></link>
 	</head>
+	<style>
+	img {
+		height: 200px;
+		width: 400px;
+	}
+	</style>
 	<body>
 		<div class="container-fluid">
 			<div class="row">
-				<h2>Day 5:</h2>
+				<h2>Day 5: Intro to the web</h2>
 				<div class="row">
-					<div class="col-md-4">.col-md-4</div>
+					<div class="col-md-4"><h4>Recap</h4>
+						<div class="row">
+							<p>Day five started with an overview of the world wide as well as a
+							a closer look at the terminal. From here we were introduced to Git and
+							and its processes to push our files and GIT things done as a group.</p>
+						</div>
+						<div class="row"><img src="tryGit.png"></div>
+					</div>
 					<div class="col-md-4">.col-md-4</div>
 					<div class="col-md-4">.col-md-4</div>
 			</div>
